# crisis_protocol

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  kill_frontend_port.sh
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  pyproject.toml  report.py  run_dev.sh
backend/src/: config.py  db.py  main.py
backend/src/ai/: bot.py  client.py  parsing.py
backend/src/api/: auth.py  deps.py  games.py  messages.py  pacts.py  scenarios.py  social.py  turns.py  ws.py
backend/src/engine/: effects.py  intel.py  interactions.py  objectives.py  pacts.py  resolver.py  scoring.py  tension.py  types.py
backend/src/models/: __init__.py  action.py  friendship.py  game.py  message.py  pact.py  player.py  room_invite.py  turn.py  user.py  user_session.py
backend/src/scenarios/: __init__.py  arctic.py  corinth.py  localize.py  oil_crisis.py
backend/src/schemas/: api.py  auth.py  scenario.py  social.py
backend/src/services/: ai_service.py  auth_service.py  chronicle.py  connection_manager.py  diplomacy_service.py  friend_service.py  game_service.py  message_service.py  pact_service.py  state_loader.py  stats_service.py  turn_service.py
backend/tests/: conftest.py
backend/tests/test_ai/: test_bot.py  test_diplomacy_parsing.py  test_pact_parsing.py  test_parsing.py  test_service.py
backend/tests/test_api/: test_chronicle.py  test_credibility_flow.py  test_db.py  test_diplomacy.py  test_games_api.py  test_pacts_api.py
backend/tests/test_engine/: _helpers.py  test_credibility.py  test_effects.py  (+7 more)
(+60 files in other folders)
